--- a/Aplikasiku/app/src/main/res/layout/activity_forgot_password.xml
+++ b/Aplikasiku/app/src/main/res/layout/activity_forgot_password.xml
@@ -6,4 +6,71 @@
 	android:layout_height="match_parent"
 	tools:context=".ForgotPasswordActivity">
 
+	<TextView
+		android:id="@+id/welcomeBack"
+		android:layout_width="wrap_content"
+		android:layout_height="wrap_content"
+		android:layout_marginLeft="24dp"
+		android:fontFamily="@font/montserrat_semi_bold"
+		android:text="@string/forgot_password"
+		android:textColor="#313131"
+		android:textSize="32sp"
+		app:layout_constraintLeft_toLeftOf="parent"
+		app:layout_constraintTop_toTopOf="parent"
+		android:layout_marginTop="90dp"
+		/>
+
+	<TextView
+		android:id="@+id/signIn"
+		android:layout_width="wrap_content"
+		android:layout_height="wrap_content"
+		android:layout_marginLeft="24dp"
+		android:layout_marginTop="8dp"
+		android:fontFamily="@font/montserrat_light"
+		android:text="Please enter your email below to recieve your password reset instruction"
+		android:textColor="#9b9b9b"
+		android:textSize="16sp"
+		app:layout_constraintLeft_toLeftOf="parent"
+		app:layout_constraintTop_toBottomOf="@id/welcomeBack" />
+
+	<TextView
+		android:id="@+id/resetCode"
+		android:layout_width="wrap_content"
+		android:layout_height="wrap_content"
+		android:layout_marginLeft="20dp"
+		android:layout_marginTop="48dp"
+		android:text="@string/username"
+		android:textColor="#313131"
+		android:textSize="20sp"
+		app:layout_constraintLeft_toLeftOf="parent"
+		app:layout_constraintTop_toBottomOf="@+id/signIn" />
+
+	<EditText
+		android:id="@+id/resetCode1"
+		android:layout_width="match_parent"
+		android:layout_height="wrap_content"
+		android:layout_marginLeft="24dp"
+		android:layout_marginTop="8dp"
+		android:layout_marginRight="24dp"
+		android:hint="Enter Your Email"
+		app:layout_constraintLeft_toLeftOf="parent"
+		app:layout_constraintRight_toRightOf="parent"
+		app:layout_constraintTop_toBottomOf="@id/resetCode"
+		/>
+
+	<Button
+		android:layout_width="match_parent"
+		android:layout_height="wrap_content"
+		android:layout_marginStart="24dp"
+		android:layout_marginEnd="24dp"
+		android:textSize="18sp"
+		android:background="@drawable/button_red"
+		android:text="@string/send_request"
+		android:textColor="#FFFFFF"
+		app:layout_constraintTop_toBottomOf="@id/resetCode1"
+		android:layout_marginTop="32dp"
+		app:layout_constraintEnd_toEndOf="parent"
+		app:layout_constraintStart_toStartOf="parent"
+		/>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
