--- a/Aplikasiku/app/src/main/res/layout/activity_forgot_password.xml
+++ b/Aplikasiku/app/src/main/res/layout/activity_forgot_password.xml
@@ -66,6 +66,7 @@
 		android:textSize="18sp"
 		android:background="@drawable/button_red"
 		android:text="@string/send_request"
+		android:onClick="postSentRequest"
 		android:textColor="#FFFFFF"
 		app:layout_constraintTop_toBottomOf="@id/resetCode1"
 		android:layout_marginTop="32dp"
